@@ -3,7 +3,11 @@ package vacademy.io.assessment_service.features.learner_assessment.service;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import vacademy.io.assessment_service.features.assessment.entity.Assessment;
+import vacademy.io.assessment_service.features.assessment.entity.QuestionAssessmentSectionMapping;
+import vacademy.io.assessment_service.features.assessment.entity.Section;
 import vacademy.io.assessment_service.features.assessment.entity.StudentAttempt;
+import vacademy.io.assessment_service.features.assessment.repository.QuestionAssessmentSectionMappingRepository;
+import vacademy.io.assessment_service.features.assessment.repository.SectionRepository;
 import vacademy.io.assessment_service.features.assessment.service.StudentAttemptService;
 import vacademy.io.assessment_service.features.learner_assessment.dto.response.LearnerUpdateStatusResponse;
 import vacademy.io.assessment_service.features.learner_assessment.dto.status_json.LearnerAssessmentAttemptDataDto;
@@ -13,6 +17,8 @@ import vacademy.io.common.exceptions.VacademyException;
 
 import java.time.Duration;
 import java.time.Instant;
+import java.time.ZoneOffset;
+import java.time.ZonedDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -22,6 +28,12 @@ public class RestartAssessmentService {
     @Autowired
     StudentAttemptService studentAttemptService;
 
+    @Autowired
+    SectionRepository sectionRepository;
+
+    @Autowired
+    QuestionAssessmentSectionMappingRepository questionAssessmentSectionMappingRepository;
+
 
     public List<LearnerUpdateStatusResponse.DurationResponse> getNewDurationForAssessment(Optional<StudentAttempt> studentAttemptOptional,
                                                                                           Assessment assessment,
@@ -30,28 +42,57 @@ public class RestartAssessmentService {
 
         if(studentAttemptOptional.isEmpty()) throw new VacademyException("No Attempt Found");
         StudentAttempt studentAttempt = studentAttemptOptional.get();
-        LearnerAssessmentAttemptDataDto savedAttemptDto = studentAttemptService.validateAndCreateJsonObject(studentAttempt.getAttemptData());
 
+        if(!Objects.isNull(requestAttemptJson) && requestedDataDtoOptional.isPresent()){
+            LearnerAssessmentAttemptDataDto requestAttemptDto = studentAttemptService.validateAndCreateJsonObject(requestAttemptJson);
+            LearnerAssessmentAttemptDataDto savedAttemptDto = studentAttempt.getAttemptData() != null ? studentAttemptService.validateAndCreateJsonObject(studentAttempt.getAttemptData()) : null;
 
-        if(requestedDataDtoOptional.isEmpty()){
-            return handleCaseWithEmptyRequestAttemptData(studentAttempt, assessment, savedAttemptDto);
+            LearnerAssessmentAttemptDataDto attemptDataDto = updateStudentAttemptDataAndReturnLatest(requestAttemptDto, savedAttemptDto, requestAttemptJson, studentAttempt);
+
+            return createDurationDistributionResponse(studentAttempt, assessment, Optional.of(attemptDataDto));
         }
 
-        return handleCaseWhereRequestAttemptDataNotEmpty(studentAttempt, assessment, savedAttemptDto, requestedDataDtoOptional.get());
+        return createDurationDistributionResponse(studentAttempt, assessment, requestedDataDtoOptional);
     }
 
-    private List<LearnerUpdateStatusResponse.DurationResponse> handleCaseWhereRequestAttemptDataNotEmpty(StudentAttempt studentAttempt,
-                                                                                                         Assessment assessment,
-                                                                                                         LearnerAssessmentAttemptDataDto savedAttemptDto,
-                                                                                                         LearnerAssessmentAttemptDataDto learnerAssessmentAttemptDataDto) {
-        Long timeLeft = timeDifference(studentAttempt.getStartTime(), studentAttempt.getMaxTime());
+    private LearnerAssessmentAttemptDataDto updateStudentAttemptDataAndReturnLatest(LearnerAssessmentAttemptDataDto requestAttemptDto, LearnerAssessmentAttemptDataDto savedAttemptDto, String requestAttemptJson, StudentAttempt studentAttempt) {
+        if(Objects.isNull(savedAttemptDto) || isSavedDataOld(studentAttempt.getServerLastSync(), requestAttemptDto.getClientLastSync())){
+            updateIfNotNull(requestAttemptJson, studentAttempt::setAttemptData);
+            updateIfNotNull(requestAttemptDto.getClientLastSync(), studentAttempt::setClientLastSync);
 
+            ZonedDateTime utcNow = ZonedDateTime.now(ZoneOffset.UTC);
+            Date utcDate = Date.from(utcNow.toInstant());
+            studentAttempt.setServerLastSync(utcDate);
 
+            studentAttemptService.updateStudentAttempt(studentAttempt);
 
-        return distributeDuration(assessment, timeLeft, learnerAssessmentAttemptDataDto);
+            return requestAttemptDto;
+        }
+        return savedAttemptDto;
     }
 
-    private List<LearnerUpdateStatusResponse.DurationResponse> distributeDuration(Assessment assessment, Long timeLeft, LearnerAssessmentAttemptDataDto learnerAssessmentAttemptDataDto) {
+    private boolean isSavedDataOld(Date serverLastSync, Date clientLastSync) {
+        Date newClientTime = new Date(clientLastSync.getTime() - TimeZone.getDefault().getRawOffset());
+        return serverLastSync.before(newClientTime);
+    }
+
+    private List<LearnerUpdateStatusResponse.DurationResponse> createDurationDistributionResponse(StudentAttempt studentAttempt,
+                                                                                                  Assessment assessment,
+                                                                                                  Optional<LearnerAssessmentAttemptDataDto> requestedDataDtoOptional) {
+        Long timeLeft = 0L;
+        if(requestedDataDtoOptional.isEmpty()){
+            ZonedDateTime utcNow = ZonedDateTime.now(ZoneOffset.UTC);
+            Date utcDate = Date.from(utcNow.toInstant());
+            timeLeft = timeDifference(studentAttempt.getStartTime(), studentAttempt.getMaxTime(), utcDate);
+        }
+        else{
+            timeLeft = timeDifference(studentAttempt.getStartTime(), studentAttempt.getMaxTime(), requestedDataDtoOptional.get().getClientLastSync());
+        }
+
+        return distributeDuration(assessment, timeLeft, requestedDataDtoOptional);
+    }
+
+    private List<LearnerUpdateStatusResponse.DurationResponse> distributeDuration(Assessment assessment, Long timeLeft, Optional<LearnerAssessmentAttemptDataDto> learnerAssessmentAttemptDataDto) {
         List<LearnerUpdateStatusResponse.DurationResponse> responses = new ArrayList<>();
         String assessmentType = assessment.getDurationDistribution();
 
@@ -62,22 +103,32 @@ public class RestartAssessmentService {
         responses.add(assessmentDuration);
 
         if(assessmentType.equals("SECTION")){
-            responses.addAll(createSectionTimeDistribution(learnerAssessmentAttemptDataDto, timeLeft));
+            responses.addAll(createSectionTimeDistribution(learnerAssessmentAttemptDataDto, timeLeft, assessment));
         } else if (assessmentType.equals("QUESTION")) {
-            List<SectionAttemptData> sections = learnerAssessmentAttemptDataDto!=null ? learnerAssessmentAttemptDataDto.getSections() : new ArrayList<>();
 
-            sections.forEach(sectionAttemptData ->{
-                responses.addAll(createQuestionTimeDistribution(sectionAttemptData, timeLeft));
-            });
+            if(learnerAssessmentAttemptDataDto.isPresent()){
+                List<SectionAttemptData> sections = learnerAssessmentAttemptDataDto.get().getSections()!=null ? learnerAssessmentAttemptDataDto.get().getSections() : new ArrayList<>();
+
+                sections.forEach(sectionAttemptData ->{
+                    responses.addAll(createQuestionTimeDistribution(Optional.of(sectionAttemptData), timeLeft, assessment, sectionAttemptData.getSectionId()));
+                });
+            }
+            else{
+                // No AttemptData
+                List<Section> allSections = sectionRepository.findByAssessmentIdAndStatusNotIn(assessment.getId(), List.of("DELETED"));
+                allSections.forEach(section->{
+                    responses.addAll(createQuestionTimeDistribution(Optional.empty(), timeLeft,assessment, section.getId()));
+                });
+            }
         }
 
         return responses;
     }
 
-    private Collection<? extends LearnerUpdateStatusResponse.DurationResponse> createQuestionTimeDistribution(SectionAttemptData sectionAttemptData, Long timeLeft) {
-        List<QuestionAttemptData> questions = sectionAttemptData!=null ? sectionAttemptData.getQuestions() : new ArrayList<>();
+    private Collection<? extends LearnerUpdateStatusResponse.DurationResponse> createQuestionTimeDistribution(Optional<SectionAttemptData> sectionAttemptData, Long timeLeft, Assessment assessment, String sectionId) {
+        List<QuestionAttemptData> questions = sectionAttemptData.isPresent() ? sectionAttemptData.get().getQuestions() : new ArrayList<>();
         if (questions == null || questions.isEmpty()) {
-            return Collections.emptyList();
+            return handleCaseForNoQuestion(timeLeft,assessment, sectionId);
         }
 
         Long totalAllocatedTime = questions.stream()
@@ -92,10 +143,24 @@ public class RestartAssessmentService {
         }).collect(Collectors.toList());
     }
 
-    private List<LearnerUpdateStatusResponse.DurationResponse> createSectionTimeDistribution(LearnerAssessmentAttemptDataDto attemptDataDto, Long timeLeft) {
-        List<SectionAttemptData> sections = attemptDataDto!=null ? attemptDataDto.getSections() : new ArrayList<>();
-        if (sections == null || sections.isEmpty()) {
-            return Collections.emptyList();
+    private Collection<? extends LearnerUpdateStatusResponse.DurationResponse> handleCaseForNoQuestion(Long timeLeft, Assessment assessment, String sectionId) {
+        List<QuestionAssessmentSectionMapping> allQuestions = questionAssessmentSectionMappingRepository.findBySectionIdAndStatusNotIn(sectionId, List.of("DELETED"));
+        Long totalAllocatedTimeInSeconds = allQuestions.stream()
+                .mapToLong(question->question.getQuestionDurationInMin()*60)
+                .sum();
+
+        return allQuestions.stream().map(question -> {
+            long newTime = (totalAllocatedTimeInSeconds == 0)
+                    ? timeLeft / allQuestions.size()
+                    : ((question.getQuestionDurationInMin() != null ? question.getQuestionDurationInMin():0) * 60 * timeLeft) / totalAllocatedTimeInSeconds;
+            return new LearnerUpdateStatusResponse.DurationResponse(question.getId(), "QUESTION", newTime);
+        }).collect(Collectors.toList());
+    }
+
+    private Collection<? extends LearnerUpdateStatusResponse.DurationResponse> createSectionTimeDistribution(Optional<LearnerAssessmentAttemptDataDto> attemptDataDto, Long timeLeft, Assessment assessment) {
+        List<SectionAttemptData> sections = attemptDataDto.isPresent() ? attemptDataDto.get().getSections() : new ArrayList<>();
+        if (Objects.isNull(sections) || sections.isEmpty()) {
+            return handleCaseForNoSection(timeLeft, assessment);
         }
 
         Long totalAllocatedTime = sections.stream()
@@ -105,50 +170,53 @@ public class RestartAssessmentService {
         return sections.stream().map(section -> {
             long newTimeInSeconds = (totalAllocatedTime == 0)
                     ? timeLeft / sections.size()
-                    : (section.getSectionDurationLeftInSeconds() * timeLeft) / totalAllocatedTime;
+                    : ((section.getSectionDurationLeftInSeconds()!=null ? section.getSectionDurationLeftInSeconds() : 0)  * timeLeft) / totalAllocatedTime;
             return new LearnerUpdateStatusResponse.DurationResponse(section.getSectionId(), "SECTION", newTimeInSeconds);
         }).collect(Collectors.toList());
     }
 
-    private List<LearnerUpdateStatusResponse.DurationResponse> handleCaseWithEmptyRequestAttemptData(StudentAttempt studentAttempt,
-                                                                                                     Assessment assessment,
-                                                                                                     LearnerAssessmentAttemptDataDto savedAttemptDto) {
-        return null;
+    private Collection<? extends LearnerUpdateStatusResponse.DurationResponse> handleCaseForNoSection(Long timeLeft, Assessment assessment) {
+        List<Section> allSections = sectionRepository.findByAssessmentIdAndStatusNotIn(assessment.getId(), List.of("DELETED")).stream()
+                .toList();
+
+        Long totalAllocatedTimeInSeconds = allSections.stream()
+                .mapToLong(section -> (section.getDuration()!=null ? section.getDuration() : 0) * 60)
+                .sum();
+
+        return allSections.stream().map(section -> {
+            long newTimeInSeconds = (totalAllocatedTimeInSeconds == 0)
+                    ? timeLeft / allSections.size()
+                    : ((section.getDuration()!=null ? section.getDuration() : 0) * 60 * timeLeft) / totalAllocatedTimeInSeconds;
+            return new LearnerUpdateStatusResponse.DurationResponse(section.getId(), "SECTION", newTimeInSeconds);
+        }).collect(Collectors.toList());
     }
 
-    private List<LearnerUpdateStatusResponse.DurationResponse> handleCaseWhereRequestAttemptEmptyAndSavedAttemptNotEmpty(StudentAttempt studentAttempt, Assessment assessment, LearnerAssessmentAttemptDataDto savedAttemptDto, LearnerAssessmentAttemptDataDto learnerAssessmentAttemptDataDto) {
-        return null;
-    }
+    private Long timeDifference(Date attemptStartTime, Integer duration, Date clientCurrentTime){
+        try{
+            Instant newTime = attemptStartTime.toInstant(); // Start time in UTC
+            Instant startTime = newTime.plus(Duration.ofHours(5).plusMinutes(30));
+            Instant currentTime = clientCurrentTime.toInstant(); // Current UTC time
 
-    private List<LearnerUpdateStatusResponse.DurationResponse> handleCaseWhereSavedAttemptEmpty(StudentAttempt studentAttempt, Assessment assessment, LearnerAssessmentAttemptDataDto learnerAssessmentAttemptDataDto) {
-        return null;
-    }
+            // Calculate end time
+            Instant endTime = startTime.plus(Duration.ofMinutes(duration));
 
-    private List<LearnerUpdateStatusResponse.DurationResponse> handleCaseWhereRequestAttemptEmpty(StudentAttempt studentAttempt, Assessment assessment, LearnerAssessmentAttemptDataDto savedAttemptDto) {
-        return null;
-    }
+            // Calculate difference in seconds
+            long differenceInSeconds = Duration.between(currentTime, endTime).getSeconds();
 
-    private List<LearnerUpdateStatusResponse.DurationResponse> handleCaseWhereRequestAttemptAndSavedAttemptEmpty(StudentAttempt studentAttempt, Assessment assessment) {
-        return null;
-    }
+            // Check condition
+            if (endTime.isBefore(currentTime)) {
+                throw new VacademyException("Attempt already Ended");
+            }
 
-    private Long timeDifference(Date attemptStartTime, Integer duration){
-        Instant startTime = attemptStartTime.toInstant(); // Start time in UTC
-        Instant currentTime = Instant.now(); // Current UTC time
-
-        // Calculate end time
-        Instant endTime = startTime.plus(Duration.ofMinutes(duration));
-
-        // Calculate difference in seconds
-        long differenceInSeconds = Duration.between(endTime, currentTime).getSeconds();
-
-        // Check condition
-        if (endTime.isBefore(currentTime)) {
-            throw new VacademyException("Attempt already Ended");
-        } else {
-            System.out.println("Time difference in seconds: " + differenceInSeconds);
+            return differenceInSeconds;
+        }catch (Exception e){
+            throw new VacademyException(e.getMessage());
         }
+    }
 
-        return differenceInSeconds;
+    private <T> void updateIfNotNull(T value, java.util.function.Consumer<T> setterMethod) {
+        if (value != null) {
+            setterMethod.accept(value);
+        }
     }
 }
